--- a/.github/workflows/CI_build_and_release.yml
+++ b/.github/workflows/CI_build_and_release.yml
@@ -269,6 +269,15 @@ jobs:
       - name: Docker - configure openssl
         run: docker exec --env-file env.custom -w /root/openssl multiarch ./Configure ${{ matrix.openssl_target }} --prefix="/usr/local" --libdir="/usr/local/lib" --openssldir="/etc/ssl" threads no-shared no-dso no-comp
 
+      - name: Docker target - dump preferences for openssl
+        run: docker exec --env-file env.custom -w /root/openssl multiarch perl configdata.pm --dump
+
+      - name: Docker target - Make build openssl
+        run: docker exec --env-file env.custom -w /root/openssl multiarch make -j$(nproc)
+
+      - name: Docker target - Make install_sw openssl
+        run: docker exec --env-file env.custom -w /root/openssl multiarch make install_sw
+
       - name: Docker - Git clone iperf
         run: docker exec --env-file env.custom -w /root multiarch git clone --single-branch --branch "master" --shallow-submodules --recurse-submodules --depth 1 https://github.com/esnet/iperf.git /root/${{ matrix.name }}
 
