--- a/.github/workflows/CI_build_and_release.yml
+++ b/.github/workflows/CI_build_and_release.yml
@@ -68,10 +68,10 @@ jobs:
           ]
         include:
           - docker_tag: aarch64-linux-musl
-            openssl_target: linux-generic64
+            openssl_target: linux-aarch64
 
           - docker_tag: aarch64_be-linux-musl
-            openssl_target: linux-generic64
+            openssl_target: linux-aarch64
 
           - docker_tag: arm-linux-musleabi
             openssl_target: linux-armv4
@@ -285,7 +285,7 @@ jobs:
         run: docker exec --env-file env.custom -w /root/${{ matrix.name }} multiarch ./bootstrap.sh
 
       - name: Docker - Configure ${{ matrix.name }}
-        run: docker exec --env-file env.custom -w /root/${{ matrix.name }} multiarch ./configure --host=${{ matrix.docker_tag }} --disable-shared --with-openssl=/usr --enable-static-bin --prefix=/root
+        run: docker exec --env-file env.custom -w /root/${{ matrix.name }} multiarch ./configure --host=${{ matrix.docker_tag }} --disable-shared --with-openssl=/usr/local --enable-static-bin --prefix=/root
 
       - name: Docker - Make Install Build ${{ matrix.name }}
         run: docker exec --env-file env.custom -w /root/${{ matrix.name }} multiarch make -j$(nproc) install
